added a section with cards to the menu section

--- a/style/style.css
+++ b/style/style.css
@@ -97,3 +97,154 @@ body {
     margin-left: 10px;                                        /*задаю левый отступ для картинки*/
 }
 
+/*--------------------------------------------------------------------------------------------------------*/
+
+body {
+    font-family: 'Montserrat', sans-serif;              /*задаю стиль текста на всей транице*/
+}
+
+/*010*/
+.main_content {
+    width: 1400px;                                      /*задаю ширину фона для страницы с карточками*/
+    background-color: aliceblue;                      /*здаю цвет подложки*/
+    margin: 0 auto;                                     /*центрирую подложку*/
+    padding: 10px 20px;                                 /*делаю внутренние отступы для блоков внутри подложки*/
+}
+
+/*020*/
+.main_content::after {
+    content: "";                                        /*делаю видим блок с подложкой, так как флоты не дают увидеть данный блок*/
+    display: table;                                     
+    clear: both;                                        
+}
+
+/*------------------------------------------------------------------------------------------------------------------*/
+/*Секция с телефонами*/
+
+/*010*/
+.card {
+    width: 1000px;                                      /*задаю ширину блоку с карточками*/
+    text-align: center;                                 /*выравниваю текст по центру в блоке с карточками*/
+    float: left;                                        /*задаю флоты карточкам с телефонами*/
+    margin: 10px 40px;                                  /*делаю внешние отступы для карточек*/
+    font-size: .9375rem;                                /*задаю размер текста*/
+    background-color: #fff;                           /*задаю цвет фона блока с карточками*/
+    border-radius: 10px;                                /*делаю радиус границ для блока с карточками*/
+    border: 1px solid rgba(220, 220, 220, 0.76);      /*делаю границы длядля блока с карточками*/
+}
+
+/*020*/
+.card::after {
+    content: "";                                         /*делаю видим блок с подложкой длякарточек, так как флоты не дают увидеть данный блок*/
+    display: table;                                     
+    clear: both;                                        
+}
+
+/*010*/
+.card__phone {
+    width: 20%;                                           /*зааю ширину карточек*/
+    background-color: #fff;                             /*задаю цвет фона карточкам*/
+    border-radius: 10px;                                  /*задаю радису границ для карточек*/
+    float: left;                                          /*делаю обтекание карточек по левой стороне*/
+    margin: 15px 23px;                                    /*делаю внешние отступы карточек*/
+    border: 1px solid gainsboro;                        /*задаю границу*/
+}
+
+/*010*/
+.card__phone:hover {
+    background-color: aliceblue;                         /*задаю смену цвета при наведении на карточку*/
+    transform: scale(1.05);                                /*задаю смену размера карточки при наведении*/
+    box-shadow: 0 0 14px black;                          /*делаю тень при наведении на карточку*/
+}
+
+/*010*/
+.header__card,
+.desc__card,
+.img_phone,
+.input__card,
+.price {
+    padding: 9px;                                           /*делаю внутренние отступы в карточке*/
+}
+
+/*010*/
+.desc__card {
+    color: rgb(228, 88, 88);                              /*меняю цвет текста описания в карточке */
+    font-weight: 500;                                       /*меняю ширину текста описания в карточке*/
+}
+
+/*010*/
+.header__card,
+.price {
+    font-weight: bold;                                      /*меняю ширину текста описания в карточке*/
+}
+
+/*010*/
+.img_phone {
+    width: 60%;                                             /*задаю ширину картинок в карточке*/
+}
+
+/*---------------------------------------------------------------------------------------------------------------------------------------*/
+/*Секция сайдбар с поиском*/
+
+/*010*/
+.sidebar {
+    width: 250px;                                            /*задаю ширину сайдбара*/
+    float: left;                                             /*делаю обтекание сайд бара*/
+    background-color: #fff;                                /*задаю цвет сайд бара*/
+    border-radius: 10px;                                     /*задаю радису границ*/
+    border: 1px solid gainsboro;                           /*делаю границу*/
+    margin-left: 30px;                                       /*делаю внешний отступ по левой стороне*/
+}
+
+/*010*/
+.sidebar__search,
+.submit,
+.filter  {
+    padding: 11px 30px;                                       /*делаю внутренние отступы для разделов формы*/
+}
+
+/*011*/
+.sidebar h3 {
+    font-weight: bold;                                        /*делаю жирными заголовки*/
+    padding-bottom: 11px;                                     /*делаю отступы снизу заголовков*/
+}
+
+/*011*/
+.sidebar__search p {
+    color: rgb(228, 88, 88);                                 /*меняю цвет текста форм*/
+}
+
+/*010*/
+.filter,
+.submit {
+    text-align: center;                                        /*выравниваю текст по центру*/
+}
+
+/*---------------------------------------------------------------------------------------------------------------------------------------*/
+
+/*Заголовок сайта*/
+
+/*010*/
+.caption {
+    width: 1000px;                                          /*задаю ширину блока*/
+    margin: 0 40px;                                         /*задаю внешние отступы по бокам*/
+    background-color: #fff;                               /*задаю фон блока*/
+    float: left;                                            /*делаю обтекания по левой стороне*/
+    border-radius: 10px;                                    /*делаю радиус границ*/
+    text-align: center;                                     /*выравниваю текст по центру*/
+    font-size: 1.1875rem;                                   /*меняю размер текста*/
+    border: 1px solid rgba(220, 220, 220, 0.76);          /*делаю границу*/
+}
+
+/*010*/
+.caption__text {
+    padding: 15px;                                           /*делаю внутренний отступ для текста в блоке*/
+    font-weight: 500;                                       /*делаю текст жирным*/
+}
+
+/*100*/
+#allo {
+    font-weight: bold;                                      /*делаю текст жирным*/
+    color: red;                                           /*меню цвет для ALLO*/
+}
+
