Added margin for section with phones

--- a/style/style.css
+++ b/style/style.css
@@ -97,18 +97,17 @@ body {
     margin-left: 10px;                                        /*задаю левый отступ для картинки*/
 }
 
-/*--------------------------------------------------------------------------------------------------------*/
-
-body {
-    font-family: 'Montserrat', sans-serif;              /*задаю стиль текста на всей транице*/
-}
+/*--------------------------------------------Секция с карточками телефонов------------------------------------------------------------*/
 
 /*010*/
 .main_content {
     width: 1400px;                                      /*задаю ширину фона для страницы с карточками*/
     background-color: aliceblue;                      /*здаю цвет подложки*/
-    margin: 0 auto;                                     /*центрирую подложку*/
+    margin: 10px auto 0px;                              /*центрирую подложку  делаю верхний внешний отступ*/
     padding: 10px 20px;                                 /*делаю внутренние отступы для блоков внутри подложки*/
+    border: 1px solid #DCDCDC;                        /*задаю границу для блока*/
+    border-radius: 10px;
+    
 }
 
 /*020*/
@@ -123,7 +122,7 @@ body {
 
 /*010*/
 .card {
-    width: 1000px;                                      /*задаю ширину блоку с карточками*/
+    width: 990px;                                      /*задаю ширину блоку с карточками*/
     text-align: center;                                 /*выравниваю текст по центру в блоке с карточками*/
     float: left;                                        /*задаю флоты карточкам с телефонами*/
     margin: 10px 40px;                                  /*делаю внешние отступы для карточек*/
@@ -221,12 +220,11 @@ body {
 }
 
 /*---------------------------------------------------------------------------------------------------------------------------------------*/
-
 /*Заголовок сайта*/
 
 /*010*/
 .caption {
-    width: 1000px;                                          /*задаю ширину блока*/
+    width: 990px;                                          /*задаю ширину блока*/
     margin: 0 40px;                                         /*задаю внешние отступы по бокам*/
     background-color: #fff;                               /*задаю фон блока*/
     float: left;                                            /*делаю обтекания по левой стороне*/
