added comments to css

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+/*------------------------------------------------------Секция в выпадающим меню-----------------------------------------------------------------------*/
 /*001*/
 body {
     font-family: 'Montserrat', sans-serif;                /*задаю стиль шритфа на странице*/
@@ -13,7 +14,7 @@ body {
     border-radius: 10px;
 }
 
-/*----------------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------------------------------------------------------------*/
 /*Выпадающий список*/
 /*010*/
 .nav {
@@ -76,7 +77,7 @@ body {
     width: 150px;                                             /*задаю щирину ссылкам*/
 }
 
-/*----------------------------------------------------------------------------------------------------*/
+/*-------------------------------------------------------------------------------------------------------------------------------------*/
 /*Заголовок*/
 /*010*/
 .heading {
@@ -148,7 +149,7 @@ body {
     border: 1px solid gainsboro;                        /*задаю границу*/
 }
 
-/*010*/
+/*020*/
 .card__phone:hover {
     background-color: aliceblue;                         /*задаю смену цвета при наведении на карточку*/
     transform: scale(1.05);                                /*задаю смену размера карточки при наведении*/
